# oecg

./: .config  .gitmodules  CMakeLists.txt  Kconfig  LICENSE  README.md  config.h
components/: CMakeLists.txt  Kconfig
components/gui/: CMakeLists.txt  lv_conf.h
components/gui/driver/: CMakeLists.txt  disp_driver.c  disp_driver.h
components/gui/driver/chip/tft/: ili9488.cpp  ili9488.h
components/gui/driver/drv_gpio/: disp_gpio.cpp  disp_gpio.h
components/gui/driver/drv_spi/: disp_spi.c  disp_spi.h  spidev.h
components/gui/porting/: CMakeLists.txt  lv_port_disp.c  lv_port_disp.h  lv_port_fs.c  lv_port_fs.h  lv_port_indev.c  lv_port_indev.h
components/main.code/: CMakeLists.txt  demo.cpp
examples/: a.out  dout.c
examples/spi/: a.out  spi.c
